# llm_rag

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py
app/misc/: __init__.py  settings.py
app/rag/: loader.py  rag_engine.py  retrieval.py
data/docs/: Tinkoff_docs.md  bank_name_docs.md
data/evaluation/: results.xlsx  synthetic_questions.csv  ~$results.xlsx
evaluation/: evaluate.py  generate_synth_data.py  generator.py  prompts.py
